Fixed Dark Mode + Added Popover

--- a/style.css
+++ b/style.css
@@ -10,15 +10,18 @@ body {
   height: 100%;
   overflow: hidden;
   line-height: 1.65;
+  height: 100vh;
 }
 
+.w-100 {
+  height: 100vh;
+}
 .undark {
   filter: invert(100%);
 }
 
 body.darkmode {
   filter: invert(100%);
-  height: 100vh;
 }
 
 div {
@@ -177,7 +180,7 @@ div {
 
 .emoji {
   margin: 0.5em 0;
-  font-size: 7em;
+  font-size: 7.5em;
 }
 
 /* Dark Mode */
